name:                advent-of-code
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tyehle/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Tobin Yehle
maintainer:          tobinyehle@gmail.com
copyright:           2016 Tobin Yehle
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Y2018.D05
                     , Search
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , cryptonite
                     , bytestring
                     , array
                     , PSQueue
                     , split
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall

executable advent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent-of-code
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent-of-code
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tyehle/advent-of-code
